# gRPC-101

./: LICENSE  README.md  TODO.md  main.py  pyproject.toml
gRPC-101/: README.md  extra.md  package-lock.json  package.json  slides.md
knowledge/: 1-Overview of gRPC.md  link.md  template.md
knowledge/2-grpc-tutorial-google/: README.md  main.py  pyproject.toml  route_guide_client.py  route_guide_pb2.py  route_guide_pb2.pyi  route_guide_pb2_grpc.py  route_guide_server.py
knowledge/2-grpc-tutorial-google/protos/: route_guide.proto
projects/: PROJECT_PLAN.md  crud.py  main.py  schemas.py  server.py
projects/grpc-vs-rest-comparison/: .env.example  .gitignore  Dockerfile.grpc  Dockerfile.rest  README.md  docker-compose.yml  pyproject.toml
projects/grpc-vs-rest-comparison/grpc-api/: server.py
projects/grpc-vs-rest-comparison/locust-tests/: locustfile.py  rest_load_test.py
projects/grpc-vs-rest-comparison/protos/: locations.proto
projects/grpc-vs-rest-comparison/rest-api/: main.py
projects/grpc-vs-rest-comparison/shared/: config.py  db.py  models.py
proposals/: EuroPython-2026.md
scripts/: join_readmes.py  join_readmes_exercises.py
tutorial/: README.md  extra.md  slides.md
tutorial/Q&A/: README.md
tutorial/bidirectional_streaming/: README.md
tutorial/cancellation_and_deadlines/: README.md
tutorial/client_streaming/: README.md
tutorial/error_handling_and_status_codes/: README.md
tutorial/exercises/: README.md
tutorial/go_deepER/: README.md
tutorial/grpc_inroduction/: README.md
tutorial/next/: README.md
tutorial/project_setup/: README.md
tutorial/protobuf/: README.md
tutorial/server_streaming/: README.md
tutorial/trash/create_proto_messages/: README.md
tutorial/trash/create_service_stubs/: README.md
tutorial/unary/: README.md
tutorial/workshop_instructor_introduction/: README.md
workshop/: .gitignore  README.md  docker-compose.yml  pyproject.toml
workshop/chat/: client.py  main.py  reference.py  server.py  solution_server.py
workshop/exercises/: README.md  client.py  conftest.py  main.py  server.py
workshop/exercises/01_protocol_buffers/: README.md  chat.proto  chat_starter.proto
workshop/exercises/02_first_service/: README.md  client_starter.py  server_starter.py
workshop/exercises/02_service_stub/: README.md  server_starter.py
workshop/exercises/03_streaming/: streaming_starter.py
workshop/exercises/03_unary_service/: README.md  server_starter.py
workshop/exercises/04_gherkin/: README.md  chat_starter.feature  test_starter.py
workshop/exercises/04_testing/: README.md  test_starter.py
workshop/exercises/04_unary_client/: README.md  client_starter.py
workshop/exercises/05_performance/: locustfile_starter.py
workshop/exercises/05_streaming/: README.md  streaming_starter.py
workshop/exercises/06_deadlines_cancellation_errors/: README.md  deadlines_starter.py
workshop/exercises/06_testing/: test_starter.py
workshop/exercises/07_final_chat_client/: README.md  client.py
workshop/exercises/07_performance/: README.md  locustfile_starter.py
workshop/features/: 02_first_service.feature  03_streaming.feature  05_performance.feature
workshop/infrastructure/: Dockerfile  Dockerfile.dev  docker-compose.yml  entrypoint.sh
workshop/infrastructure/monitoring/: prometheus.yml
workshop/monitoring/: prometheus.yml
workshop/monitoring/grafana/dashboards/: grpc_chat.json
workshop/protos/: chat.proto
workshop/solutions/: client.py  main.py  server.py
workshop/solutions/01_protocol_buffers/: chat.proto
workshop/solutions/02_first_service/: client.py  server.py
workshop/solutions/02_service_stub/: server.py
workshop/solutions/03_streaming/: streaming.py
workshop/solutions/03_unary_service/: server.py
workshop/solutions/04_testing/: test_chat.py
workshop/solutions/04_unary_client/: client.py
workshop/solutions/05_performance/: locustfile.py
workshop/solutions/05_streaming/: streaming.py
workshop/solutions/06_deadlines_cancellation_errors/: deadlines_demo.py
workshop/solutions/06_testing/: test_chat.py
workshop/solutions/07_performance/: locustfile.py
workshop/tests/: conftest.py  locustfile.py  test_chat.py
workshop/tests/exercises/: conftest.py  test_01_proto.py  test_02_service.py  test_02_service_stub.py  test_03_streaming.py  test_03_unary_service.py  test_04_testing.py  test_04_unary_client.py  test_05_performance.py  test_05_streaming.py  test_06_deadlines_cancellation_errors.py  test_06_testing.py  test_07_final_chat_client.py  test_07_performance.py
workshop/tests/features/: 01_protocol_buffers.feature  04_gherkin_solution.feature
workshop/tests/solutions/: conftest.py  test_01_proto.py  test_02_service.py  test_02_service_stub.py  test_03_streaming.py  test_03_unary_service.py  test_04_testing.py  test_04_unary_client.py  test_05_performance.py  test_05_streaming.py  test_06_deadlines_cancellation_errors.py  test_06_testing.py  test_07_final_chat_client.py  test_07_performance.py  test_chat.py
workshop/tests/step_defs/: conftest.py  test_01_proto.py  test_02_service.py  test_03_streaming.py  test_04_gherkin.py  test_05_performance.py
