[project]
name = "grpc-chat-workshop"
version = "0.1.0"
description = "gRPC Chat Service — EuroPython 2026 Workshop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0",
    "grpcio-reflection>=1.64.0",
    "prometheus-client>=0.20.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "locust>=2.28.0",
    "ruff>=0.4.0",
    "poethepoet>=0.27.0",
]

[tool.poe.tasks]
generate = "python -m grpc_tools.protoc -I protos --python_out=chat/generated --grpc_python_out=chat/generated protos/chat.proto"
server = "python -m chat.main server"
test = "pytest tests/ -v"
lint = "ruff check ."
fmt = "ruff format ."
locust = "locust -f tests/locustfile.py"

[tool.poe.tasks.client-send]
cmd = "python -m chat.main client send"
help = "Send a single message (unary)"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat"]
