[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grpc-vs-rest-comparison"
version = "0.1.0"
description = "Performance comparison between REST (FastAPI) and gRPC"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Kamil Kulig" }]

dependencies = [
  # FastAPI & REST
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",

  # gRPC
  "grpcio>=1.59.0",
  "grpcio-tools>=1.59.0",
  "protobuf>=4.24.0",

  # Database
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.12.0",

  # Performance Testing
  "locust>=2.17.0",
  "aiohttp>=3.9.0",

  # Utilities
  "python-dotenv>=1.0.0",
  "loguru>=0.7.0",
  "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.6.0",
  "ipython>=8.16.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
